# test-protobuf-ttrpc

./: Cargo.toml  Makefile
service/: service.proto
src/: client.rs  logging.rs  main.rs  server.rs  service.rs  service_ttrpc.rs  ttrpc.rs  types.rs
